add: readme and update env example

--- a/env.example
+++ b/env.example
@@ -2,3 +2,4 @@ SERVER_HOST=0.0.0.0
 SERVER_REST_PORT=8080
 TELEGRAM_BOT_TOKEN=**************************
 TELEGRAM_USERNAME_ALLOWED=***,***,***
+TGBOT_DB_POSTGRESQL_URL=
